# pyarctos

./: LICENSE  README.md  pyproject.toml
pyarctos/: __init__.py  arctos.py
