[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[project]
name = "PyArctos"
version = "0.0.1"
authors = [
  { name="Harlan Williams", email="hrw@ku.edu" },
]
description = "A library for interacting with the Arctos API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hrhwilliams/pyarctos"
"Bug Tracker" = "https://github.com/hrhwilliams/pyarctos/issues"
